--- a/7._website_flexbox/edgeledger_website/index.html
+++ b/7._website_flexbox/edgeledger_website/index.html
@@ -25,7 +25,7 @@
         
         <nav>
           <ul>
-            <li><a href="#home">Home1</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#cases">Cases</a></li>
             <li><a href="#blog">Blog</a></li>
@@ -108,6 +108,59 @@
         </div>
       </section>
 
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam nihil vel rem non tempora? Hic doloribus voluptas illo eaque laborum.</p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="images/cases/cases1.jpg" alt="">
+            <img src="images/cases/cases2.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="images/cases/cases3.jpg" alt="">
+            <img src="images/cases/cases4.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="images/cases/cases5.jpg" alt="">
+            <img src="images/cases/cases6.jpg" alt="">
+          </div>
+          <div class="column">
+            <img src="images/cases/cases7.jpg" alt="">
+            <img src="images/cases/cases8.jpg" alt="">
+          </div>
+        </div>
+      </section>
+
+        <!-- blog -->
+        <section id= "blog" class="blog flex-columns flex-reverse">
+          <div class="row">
+            <div class="column">
+              <div class="column-1">
+                <img src="images/home/blog.jpg" alt="" />
+              </div>
+            </div>
+            <div class="column">
+              <div class="column-2 bg-secondary">
+                <h4>2020</h4>
+                <h2>blog post</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                  illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                  iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                  dolore id itaque?
+                </p>
+                <a href="#" class="btn btn-outline">
+                  <i class="fas fa-chevron"></i>
+                  Read our blog
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       
     </main>
    
