--- a/7._website_flexbox/edgeledger_website/index.html
+++ b/7._website_flexbox/edgeledger_website/index.html
@@ -153,7 +153,7 @@
                   iusto cupiditate odio maxime adipisci cumque eligendi nemo
                   dolore id itaque?
                 </p>
-                <a href="#" class="btn btn-outline">
+                <a href="blog.html" class="btn btn-outline">
                   <i class="fas fa-chevron"></i>
                   Read our blog
                 </a>
